--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <img src="IMG_3928のコピー.jpg" width="300px">
     <img src="IMG_3929のコピー.jpg" width="300px">
     <img src="IMG_3930のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_3931のコピー.jpg" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
     <img src="" width="300px">
