--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <img src="IMG_3932のコピー.jpg" width="300px">
     <img src="IMG_3933のコピー.jpg" width="300px">
     <img src="IMG_3934のコピー.jpg" width="300px">
-    <img src="" width="300px">
+    <img src="IMG_3935のコピー.jpg" width="300px">
   </body>
 </html>IMG_3933のコピー.jpgIMG_3934のコピー.jpg
